Fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -33,31 +33,12 @@ body {
   width: 50%;
   height: auto;
 }
-/*
-.page-inactive {
-  transition: ease-in-out .6s;
-  width: 100%;
-  height: 100vh;
-  transform: translateY(0);
-}
-.next-page-active {
-  transition: ease-in-out .6s;
-  width: 100%;
-  height: 100vh;
-  transform: translateY(-100%);
-}
-.prev-page-active {
-  transition: ease-in-out .6s;
-  width: 100%;
-  height: 100vh;
-  transform: translateY(0);
-}
-*/
+
 .campaign-section {
   max-width: 560px;
   height: calc(100% - 700px);
   position: absolute;
-  top: 25%;
+  top: 40%;
   left: 20%;
 }
  .campaign-section h3 {
@@ -497,7 +478,7 @@ bottom: -20px;
   height: 40px;
   position: relative;
   top: 250px;
-  margin-left: 250px;
+  margin-left: 80%;
   padding: 10px 20px;
   color: #fff;
   background-color: #262424;
@@ -866,7 +847,7 @@ textarea::placeholder {
 }
  .imagePage {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .imageContainer {
@@ -893,7 +874,7 @@ textarea::placeholder {
   cursor: pointer;
 }
 .addBtn img {    
-  width: 50px;
+  width: 35px;
   cursor: pointer;
 }
 .image {
@@ -931,6 +912,7 @@ textarea::placeholder {
   margin: 10px;
   font-weight: 600;
   border-radius: 5px;
+  width: 32px;
 }
 .option-description {
   margin: 20px 0;
@@ -1334,9 +1316,9 @@ textarea::placeholder {
 }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 580px) {
   body {
-    width: 100%;
+    width: 100vw;
     overflow-x: hidden;
   }
   .navbar {
@@ -1398,9 +1380,12 @@ textarea::placeholder {
     width: 300px;
   }
   .campaignDetails {
-    padding: 0;
-    left: 10px;
-    top: 90px
+    padding: 0 10px;
+    position: absolute;
+    left: 0;
+    top: 81px;
+    /* margin: 0 10px; */
+    width: 100%;
   }
   .rc-text {
     max-width:300px;
@@ -1408,14 +1393,15 @@ textarea::placeholder {
   .right-container {
     margin-top: 50px;
     display: flex;
-    overflow-x: hidden;
+    overflow-x: auto;
     padding: 0;
   }
   .rt-ct {
-    margin-right: 0;
+    margin-right: 20px;
   }
   .details-content {
     margin: 0;
+    padding: 0 10px;
     width: 100vw;
   }
   .content {
@@ -1450,5 +1436,8 @@ textarea::placeholder {
   }
   .sm-icon-container {
     flex-wrap: wrap;
+  }
+  .sm-links {
+    margin-bottom: 10px;
   }
 }
